<resources>
    <string name="app_name">ProjectZero</string>
    <string name="project_zero">Project Zero</string>
    <string name="Description">Vous vous appretez a entrer dans une aventure ou seul votre reflexion pourra vous sauvez la vie. Vous allez devoir vous échaper de l\'endroit ou vous vous trouvez, mais attention vos actions sont comptés…</string>
    <string name="entrer">Entrer</string>
    <string name="entrer_dans_l_aventure">Entrer dans l\'aventure</string>
    <string name="Dead">C\'est ainsi que plus personne n\'entendit parler de vous…</string>
    <string name="retour_menu">Retour menu</string>
    <string name="Rules">Le compteur d\'action est en bas de l\'écran. S\'il atteint 0 la partie est perdu.</string>
    <string name="_5">5</string>
    <string name="Rules2">Les icones Observation, permettent d\'observer l\'environnement. Ils ne necessitent pas de point d\'action. </string>
    <string name="Rules3">Les incones Action permettent d\'interagir avec l\'environnement. Effectuer une action nécessite un point d\'action.</string>
    <string name="Intro">Vous vous reveillez dans une étrange cage aux épais barreaux, dans ce qui semble etre une vieille cave. En un coup d\'oeil vous comprennez etre séquestré dans ce lieu sordide et apparemment vous n\'êtes pas le premier.</string>
    <string name="ActionButtonDoorNull">Le cadena est trop solide et vous ne parvenez pas à l\'ouvrir</string>
    <string name="ActionDoor">La porte est fermée d\'une lourde chaine avec un gros cadena à serrure.</string>
    <string name="ActionBed">Un lit marqué de taches brunatre.le lit semble pouvoir ce déplacer recemment.</string>
    <string name="ActionWc">Des toilettes d\'une saleté repoussante.il n\'y a pas d\'eau à l\'interieur. il ne semble pas relier a la tuillauterie.</string>
    <string name="ObsWorkplan">Un plan de travail avec de nombreux papiers epparpillez partout. Vous etes trop loin pour pouvoir lire quoi que ce soit.</string>
    <string name="ActionWorkplan">Des papiers, articles de vieux journaux.</string>
    <string name="ActionButtonWorkplanNull">A voir</string>
    <string name="eventMove">Déplacer</string>
    <string name="eventOpen">Ouvrir</string>
    <string name="eventRead">Lire</string>
    <string name="eventExploration">Fouiller</string>
    <string name="eventTake">Prendre</string>
    <string name="eventPull">Tirer</string>
    <string name="ActionButtonWc">Dans un grincement vous déplacé les toilettes et vous rendez compte que derriere il y a un passage étroit.</string>
    <string name="positionDépart">Un symbole indique la position de départ.</string>
    <string name="actionButtonBed">Vous déplacez le lit. Vous trouvez sur sol un message écrit au doigt avec du sang: \'Je m\'appel Archie Mantat. Je ne sais pas comment je suis arrivé ici. Cela fait 3 jours que je suis là. J\'enttend une femme crier dans la salle à coté. Si vous lisez ce message, dite à ma famille que je les aimes.\'</string>
    <string name="ObsLockerR2">Des objets de toutes sortes sont entassés.</string>
    <string name="enterRoom2">Vous vous faufilez par le trou. Vous entrez dans une petite salle exigu rempli d\'objets en tout genre.</string>
    <string name="porteR2">Une porte en bois vieillie.</string>
    <string name="ButtonActionDoorR2">La porte s\'ouvre sur ce qui semble être un débarra.</string>
    <string name="rulesArrows">Les icons flèche permettent de vous déplacer d\'une salle à une autre pour une action.</string>
    <string name="ActionShelf">Une boite en metal rouillé.</string>
    <string name="findKeydoor">Vous trouvez une clef de porte.</string>
    <string name="actionWooddoor">Une porte en bois.</string>
    <string name="DoorClose">La porte est fermé a clef.</string>
    <string name="DoorOpenKey">Vous utilisez la clef pour ouvrir la porte.</string>
    <string name="actionLocker1">Vous fouillez un amas d\'objets en tous genre. Des cartons remplis de vielles vaiselles, des jouets d\'enfants d\'un autre age et autres babioles. Autour de nombreux objets, une boite de gouter en metal attire votre attention.</string>
    <string name="buttonActionLocker1">A l\'interieur de la boite vous trouvez des morceaux de reste humain. Cela vous lève le coeur, vous perdez une action.</string>
    <string name="actionTable">Sur une table en métal rouillée il y a 5 sac mortueaire en plastique bleus.</string>
    <string name="buttonAtcionTable">Vous commencez à fouiller les sacs mortuaire quand vous vous appercevez qu\'il sont pleins. Cela vous écoeur, vous ne pouvez pas continuer.</string>
    <string name="actionTools">Une boite à outils pleine de sang posée sur un tabouré à coté de la table.</string>
    <string name="buttonActonTols">Les outils sont tous cassés et rien ne semble utile.</string>
    <string name="actionCarton">Des cartons sont entassés dans le coin de la pîèce. Un carton posé tout droit semble un peu ouvert.</string>
    <string name="buttonActionCarton">A l\'interieur vous tombez sur une éffrayante poupée avec une robe imbibée de rouge par du sang. Elle a des clou plantés dans la tête en guise de chevelure et des yeux pris directement sur des humains.</string>
    <string name="actionNailBoard">Une planche à clou avec une grosse clef pendu.</string>
    <string name="buttonActionNailBorad">Vous récuperez la clef.</string>
    <string name="buttonActionDoorOpen">Vous utilisez la clef pour ouvrir le cadena.</string>
    <string name="buttonActionDoorR3part">La poignet semble fonctionner mais la porte est bloqué de l\'autre coté.</string>
    <string name="actionDoorR3part">Une porte sans serrure.</string>
    <string name="actionTableR3">Sur une table métalique se trouve un corp calciné.</string>
    <string name="buttonActionTableR3">Les morceaux se décomposent. Cela vous écoeur.</string>
    <string name="actionFlag">Un grand drapeau d\'un groupe de hardRock est accrocher au mur.</string>
    <string name="actionDoorR3">La porte est fermée par 2 cadenas; un rouge est un bleu.</string>
    <string name="AREVOIR">la porte !!!!!!!</string>
    <string name="buttonActionFlag">Le drapeau se décroche et vous trouver une porte cachée derrière</string>
    <string name="openCadenas2">Ouvrir les 2 cadenas</string>
    <string name="padlockClose">Le cadenas ne s\'ouvre pas.</string>
    <string name="x">X</string>
    <string name="actionLocker2">Au milieu du bazard vous voyez un petit cahier.</string>
    <string name="buttonActionLocker2">Vous trouvez ce qui semble être le journal d\'un enfant.</string>
    <string name="buttonActionLocker22">Vous avez accès au journal dans l\'inventaire en bas à droite.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
